# rabbit-hole

./: .env  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
apps/cli/alice/: Cargo.toml
apps/cli/alice-1/: Cargo.toml
apps/cli/alice-1/src/: cli.rs  common.rs  logging.rs  main.rs
apps/cli/alice-1/src/cli/: capabilities.rs  key_share.rs
apps/cli/alice-1/src/cli/dkg/csi_rashi/: aggregate.rs  deal.rs
apps/cli/alice-1/src/cli/tss/: dkls.rs  frost.md
apps/cli/alice-1/src/cli/tss/frost/: aggregate.rs  sign.rs
apps/cli/alice-1/src/cli/tss/frost/nonce/: list.rs
apps/cli/alice/doc/: csi-rashi.md  csi_rashi.md  frost.md  sign-and-verify.md
apps/cli/alice/src/: cli_args.rs  commands.rs  common.rs  curve.rs  main.rs  namespace.rs
apps/cli/alice/src/cli/: dkg.rs  key_share.rs  tss.rs
apps/cli/alice/src/cli/dkg/: csi-rashi.md  csi_rashi.rs
apps/cli/alice/src/cli/dkg/csi_rashi/: aggregate.rs  cancel.rs  deal.rs
apps/cli/alice/src/cli/tss/: frost.rs
apps/cli/alice/src/cli/tss/frost/: aggregate.rs  frost.md  nonce.rs  sign.rs
apps/cli/alice/src/cli/tss/frost/nonce/: count.rs  generate.rs  list.rs  marked_used.rs  remove.rs
apps/cli/alice/src/commands/: tea_party.rs
apps/services/tea-party/: Cargo.toml
apps/services/tea-party/src/: cli_args.rs  main.rs
lib/cli/alice/: Cargo.toml
lib/cli/alice-old/: Cargo.toml
lib/cli/alice-old/src/cli/: capabilities.rs  cli_keys.rs
lib/cli/alice-old/src/cli/cli_dkg/: cli_csi_rashi.rs
lib/cli/alice-old/src/cli/cli_dkg/cli_csi_rashi/: cli_aggregate_deals.rs  cli_produce_deals.rs
lib/cli/alice-old/src/cli/cli_tss/: cli_frost.rs
lib/cli/alice-old/src/cli/cli_tss/cli_frost/: cli_aggregate.rs  cli_nonce.rs  cli_sign.rs  data.rs  transcript.rs
lib/cli/alice/src/: cli.rs  common.rs  data.rs  lib.rs  tests.rs  transcript.rs
lib/cli/alice/src/caps/: io.rs
lib/cli/alice/src/cli/: bootstrap.rs  capabilities.rs  cli_dkg.rs  cli_keys.rs  cli_storage.rs  cli_tss.rs  cmd_storage.rs  dkg.rs  keys.rs  s4.rs  sign.rs  storage.rs  tss.rs  verify.rs
lib/cli/alice/src/cli/cli_dkg/: cli_csi_rashi.rs
lib/cli/alice/src/cli/cli_dkg/cli_csi_rashi/: cli_aggregate_deals.rs  cli_produce_deals.rs  cli_reset.rs  data.rs
lib/cli/alice/src/cli/cli_storage/: cli_init.rs
lib/cli/alice/src/cli/cli_tss/: cli_frost.rs
lib/cli/alice/src/cli/cli_tss/cli_frost/: cli_aggregate.rs  cli_nonce.rs  cli_sign.rs  data.rs  transcript.rs
lib/cli/alice/src/cli/dkg/: csi_rashi.rs
lib/cli/alice/src/cli/tss/: dkls.rs  frost.md  frost.rs
lib/cli/alice/src/common/: curve.rs  hash_function.rs
lib/cli/alice/src/data/: key.rs
lib/cli/alice/src/tests/: cli_utils.rs  io_utils.rs  test_dkg.rs
lib/cli/alice/src/tests/test_dkg/: test_csi_rashi.rs
lib/cli/storage/: Cargo.toml
lib/cli/storage-sled/: Cargo.toml
lib/cli/storage-sled/src/: lib.rs  storage_sled.rs
lib/cli/storage/src/: lib.rs  storage.rs  table.rs
lib/common/interop/: Cargo.toml
lib/common/interop/src/: curve.rs  curve_select.rs  hash_function.rs  hash_function_select.rs  lib.rs  s4_share.rs  transcript.rs  types.rs
lib/common/interop/src/types/: impl_curve.rs  impl_hash_function.rs  impl_key_share.rs  impl_kv.rs  impl_point.rs  impl_scalar.rs
lib/common/logging/: Cargo.toml
lib/common/logging/src/: config.rs  level_filter_trie.rs  lib.rs
lib/common/macros/: Cargo.toml
lib/common/macros/src/: dispatch.rs  lib.rs
lib/common/macros/src/dispatch/: tests.rs
lib/crypto-primitives/csi-rashi-dkg/: Cargo.toml  README.md
lib/crypto-primitives/csi-rashi-dkg/src/: csi_rashi_dkg.rs  lib.rs
lib/crypto-primitives/dkls-tss/: Cargo.toml  README.md  notepad.md
lib/crypto-primitives/dkls-tss/src/: demo.rs  dkls_tss.rs  lib.rs  tests.rs
lib/crypto-primitives/dkls-tss/src/dkls_tss/: a.rs  b.rs  mta.rs
lib/crypto-primitives/feldman-vsss/: Cargo.toml
lib/crypto-primitives/feldman-vsss/src/: feldman_vsss.rs  lib.rs
lib/crypto-primitives/frost-tss/: Cargo.toml  README.md
lib/crypto-primitives/frost-tss/src/: frost_tss.rs  lib.rs
lib/crypto-primitives/hmrt-mta/: Cargo.toml  README.md
lib/crypto-primitives/hmrt-mta/src/: api_no_k.rs  demo.rs  hmrt_mta.rs  lib.rs
lib/crypto-primitives/schnorr-proof/: Cargo.toml
lib/crypto-primitives/schnorr-proof/src/: lib.rs
lib/crypto-primitives/shamir-sss/: Cargo.toml
lib/crypto-primitives/shamir-sss/src/: lib.rs  shamir_sss.rs
lib/crypto-primitives/simplest-ot/: Cargo.toml  README.md
lib/crypto-primitives/simplest-ot/src/: lib.rs  simplest_ot.rs  tests.rs
lib/crypto-primitives/utils/: Cargo.toml
lib/crypto-primitives/utils/src/: bytes_to_scalar.rs  lib.rs
lib/schnorr-proof/src/: lib.rs  schnorr_proof.rs
lib/shamir-sss/: Cargo.toml
lib/shamir-sss/src/: lib.rs  shamir_sss.rs
lib/wonderland/tea-party-protocol/: Cargo.toml
lib/wonderland/tea-party-protocol/src/: authenticate.rs  lib.rs
rabbit-hole/: Cargo.toml
rabbit-hole/src/: lib.rs
tests/crypto-primitives-tests/: Cargo.toml
tests/crypto-primitives-tests/src/: curve25519_dalek_edwards.rs  curve25519_dalek_ristretto.rs  curve_debug.rs  k256.rs  lib.rs
tests/crypto-primitives-tests/src/generic/: csi_rashi_dkg.rs  dkls.rs  frost_tss.rs  hmrt_mta.rs  hmrt_mta_with_k.rs  hmrt_mta_without_k.rs  schnorr_proof.rs  shamir_sss.rs  simplest_ot.rs
tests/curve-debug/: Cargo.toml
tests/curve-debug/src/: def_f.rs  def_g.rs  impl_f.rs  impl_g.rs  lib.rs
tests/shamir-sss-tests/: Cargo.toml
tests/shamir-sss-tests/src/: lib.rs
tests/tests/: Cargo.toml
tests/tests/src/: curve25519_dalek_edwards.rs  curve25519_dalek_ristretto.rs  k256.rs  lib.rs
tests/tests/src/generic/: csi_rashi_dkg.rs  feldman_vsss.rs  shamir_sss.rs
