[workspace]
members = [
    "rabbit-hole",
    "lib/*/*",
    "apps/*/*",
    "tests/*",
]

[workspace.dependencies]
digest = "^0.10"
ff = "^0.13"
group = "^0.13"
heapless = "^0.7"
rand = "^0.8"
subtle = "^2.5"
thiserror = "^1"
zeroize = "^1.6"

k256 = {version = "^0.13", default-features = false, features = ["arithmetic"]}
curve25519 = {git = "https://github.com/str4d/curve25519-dalek.git", package = "curve25519-dalek", branch = "ff", default-features = false, features = ["group"]}

sha2 = "^0.10"
sha3 = "^0.10"

csi-rashi-dkg = {path = "lib/crypto-primitives/csi-rashi-dkg", package = "rabbit-hole-crypto-primitives-csi-rashi-dkg"}
feldman-vsss = {path = "lib/crypto-primitives/feldman-vsss", package = "rabbit-hole-crypto-primitives-feldman-vsss"}
frost-tss = {path = "lib/crypto-primitives/frost-tss", package = "rabbit-hole-crypto-primitives-frost-tss"}
schnorr-proof = {path = "lib/crypto-primitives/schnorr-proof", package = "rabbit-hole-crypto-primitives-schnorr-proof"}
shamir-sss = {path = "lib/crypto-primitives/shamir-sss", package = "rabbit-hole-crypto-primitives-shamir-sss"}
utils = {path = "lib/crypto-primitives/utils", package = "rabbit-hole-crypto-primitives-utils"}
