[workspace]
members = [
    "lib/*/*",
    "apps/*/*",
    "tests/*",
]

[workspace.dependencies]
base64 = "^0.21"
digest = "^0.10"
dotenv = "^0.15"
ff = "^0.13"
group = "^0.13"
heapless = "^0.7"
hex = "^0.4"
lockfile = "^0.4"
rand = "^0.8"
securestore = "^0.100"
serde = "^1"
serde_json = "^1"
serde_yaml = "^0.9"
sled = "^0.34"
structopt = "^0.3"
subtle = "^2.5"
thiserror = "^1"
tokio = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.3"
zeroize = "^1.6"

k256 = {version = "^0.13", default-features = false, features = ["arithmetic"]}
curve25519 = {git = "https://github.com/str4d/curve25519-dalek.git", package = "curve25519-dalek", branch = "ff", default-features = false, features = ["group"]}

sha2 = "^0.10"
sha3 = "^0.10"

csi-rashi-dkg = {path = "lib/crypto-primitives/csi-rashi-dkg", package = "rabbit-hole-crypto-primitives-csi-rashi-dkg"}
feldman-vsss = {path = "lib/crypto-primitives/feldman-vsss", package = "rabbit-hole-crypto-primitives-feldman-vsss"}
frost-tss = {path = "lib/crypto-primitives/frost-tss", package = "rabbit-hole-crypto-primitives-frost-tss"}
schnorr-proof = {path = "lib/crypto-primitives/schnorr-proof", package = "rabbit-hole-crypto-primitives-schnorr-proof"}
shamir-sss = {path = "lib/crypto-primitives/shamir-sss", package = "rabbit-hole-crypto-primitives-shamir-sss"}
utils = {path = "lib/crypto-primitives/utils", package = "rabbit-hole-crypto-primitives-utils"}

common-interop = {path = "lib/common/interop", package = "rabbit-hole-common-interop"}
common-logging = {path = "lib/common/logging", package = "rabbit-hole-common-logging"}

cli-alice = {path = "lib/cli/alice", package = "rabbit-hole-cli-alice"}
cli-storage = {path = "lib/cli/storage", package = "rabbit-hole-cli-storage"}
