[package]
name = "crypto-primitives-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519 = {workspace = true}
digest = {workspace = true}
ff = {workspace = true}
group = {workspace = true}
k256 = {workspace = true}
rand = {workspace = true}
sha3 = {workspace = true}

csi-rashi-dkg = {workspace = true}
feldman-vsss = {workspace = true}
frost-tss = {workspace = true}
hmrt-mta = {workspace = true}
shamir-sss = {workspace = true}
schnorr-proof = {workspace = true}
simplest-ot = {workspace = true}
utils = {workspace = true}