[package]
name = "curve-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = {workspace = true}
ff = {workspace = true}
group = {workspace = true}
rand = {workspace = true}
subtle = {workspace = true}
