[package]
name = "alice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = {workspace = true}
ed25519-dalek = {workspace = true}
ssh-key = {workspace = true, features = ["ed25519"]}
structopt = {workspace = true}
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
url = {workspace = true}
zeroize = {workspace = true}
