[package]
name = "rabbit-hole-cli-storage-sled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lockfile = {workspace = true}
sled = {workspace = true}
tracing = {workspace = true}

cli-storage = {workspace = true}