[package]
name = "rabbit-hole-crypto-primitives-csi-rashi-dkg"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std-error = ["dep:thiserror"]

[dependencies]
ff = {workspace = true}
group = {workspace = true}
# heapless = {workspace = true}
rand = {workspace = true}
thiserror = {workspace = true, optional = true}

shamir-sss = {workspace = true}
feldman-vsss = {workspace = true}