[package]
name = "rabbit-hole-crypto-primitives-dkls-tss"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std-error = ["dep:thiserror"]

[dependencies]
digest = {workspace = true}
elliptic-curve = {workspace = true}
group = {workspace = true}
ff = {workspace = true}
rand = {workspace = true}
thiserror = {workspace = true, optional = true}

hmrt-mta = {workspace = true}
shamir-sss = {workspace = true}
utils = {workspace = true}

[dev-dependencies]
k256 = {workspace = true}
curve25519 = {workspace = true}
sha3 = {workspace = true}

curve-debug = {workspace = true}