[package]
name = "rabbit-hole-crypto-primitives-frost-tss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = {workspace = true}
ff = {workspace = true}
group = {workspace = true}
rand = {workspace = true}

shamir-sss = {workspace = true}
utils = {workspace = true}

[dev-dependencies]
sha3 = {workspace = true}
curve25519 = {workspace = true}
k256 = {workspace = true}