[package]
name = "rabbit-hole-crypto-primitives-hmrt-mta"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
group = {workspace = true}
ff = {workspace = true}
rand = {workspace = true}

simplest-ot = {workspace = true}

[dev-dependencies]
curve25519 = {workspace = true}
digest = {workspace = true}
k256 = {workspace = true}
sha3 = {workspace = true}

utils = {workspace = true}
