[package]
name = "rabbit-hole-crypto-primitives-simplest-ot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
group = {workspace = true}
ff = {workspace = true}
rand = {workspace = true}

[dev-dependencies]
k256 = {workspace = true}
curve25519 = {workspace = true}
